@@ -1,6 +1,6 @@
 require 'rubygems'
-require 'bundler'
-Bundler.setup
+require 'bundler/setup'
+
 require 'minitest/spec'
 require 'minitest/autorun'
 
